--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "bootstrap": "^4.6.0",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
-    "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,6 +22,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.42.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
