--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "antd": "^4.16.13",
     "axios": "^0.23.0",
     "bootstrap": "^4.6.0",
+    "echarts": "^5.2.1",
+    "echarts-for-react": "^3.0.1",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
