--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.5",
