--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
+    "react-js-pagination": "^3.0.3",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.5",
     "react-responsive-modal": "^6.1.0",
